fixed the margins on mobile on the regions page

--- a/Shelter/css/styles.css
+++ b/Shelter/css/styles.css
@@ -43,6 +43,10 @@ body {
    font-weight: 200;
 }
 
+.content.home {
+  margin: 0 1em;
+}
+
 .content {
 	text-align: center;
 	min-height: 85%;
